Fix right date-picker gradient not disappearing on firefox mobile

--- a/to-do/src/styles/globals.css
+++ b/to-do/src/styles/globals.css
@@ -281,6 +281,8 @@ input[type='checkbox'] {
         var(--gray0) calc(100% - var(--right-fade)),
         transparent 100%
     );
+
+    mask-composite: exclude;
 }
 
 .date-picker.at-start {
